--- a/product.html
+++ b/product.html
@@ -186,9 +186,9 @@
         <span class="page-title">Hunter Chicken Product</span>
       </div>
       <ul id="navMenu">
-        <li><a href="about.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="product.html">Produk</a></li>
-        <li onclick="location.href='about.html#service'"><a href="about.html"></a>Layanan</li>
+        <li onclick="location.href='about.html#service'"><a href="index.html"></a>Layanan</li>
         <li onclick="location.href='product.html#footer'">Lokasi</li>
         <li class="wa-nav"><a href="https://wa.me/6285778266727" target="_blank">Order WhatsApp</a></li>
       </ul>
